--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom sticky-top h-auto">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
