--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -12,8 +12,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <%- include("../includes/navbar.ejs") %>
-    <div class="container"><%- body %></div>
+    <%- include("../includes/navbar.ejs") %>   
+    <div class="container">       
+        <%- include("../includes/flash.ejs") %>
+        <%- body %></div>
     <%- include("../includes/footer.ejs")%>
 
 
