--- a/views/Listing/new.ejs
+++ b/views/Listing/new.ejs
@@ -3,33 +3,33 @@
 <div class="row">
   <div class="col-8 offset-2">
     <h2>Create a New Listing</h2>
-    <form action="/listing" method="post"  novalidate class="needs-validation">
+    <form action="/listing" method="post" novalidate class="needs-validation">
+      
       <div class="mb-3">
-        <label for="name" class="form-label">Enter Title</label>
+        <label for="title" class="form-label">Enter Title</label>
         <input
           type="text"
           class="form-control"
           placeholder="Add a catchy Title"
-          name="name"
-          id="name"
+          name="listing[title]"
+          id="title"
           required
         />
         <div class="valid-feedback">Title Looks good!</div>
-        <div class="invalid-feedback">enter valid title</div>
+        <div class="invalid-feedback">Enter valid title</div>
       </div>
 
       <div class="mb-3">
         <label for="description" class="form-label">Enter Description</label>
         <textarea
-          type="text"
           class="form-control"
           placeholder=""
-          name="description"
+          name="listing[description]"
           id="description"
           required
         ></textarea>
-         <div class="valid-feedback">Description Looks good!</div>
-        <div class="invalid-feedback">enter valid Description</div>
+        <div class="valid-feedback">Description Looks good!</div>
+        <div class="invalid-feedback">Enter valid Description</div>
       </div>
 
       <div class="mb-3">
@@ -38,7 +38,7 @@
           type="text"
           class="form-control"
           placeholder="Enter Image Link"
-          name="image"
+          name="listing[image]"
           id="image"
         />
       </div>
@@ -47,14 +47,13 @@
         <div class="mb-3 col-md-4">
           <label for="price" class="form-label">Enter price</label>
           <input
-            
             class="form-control"
             placeholder="1200"
-            name="price"
+            name="listing[price]"
             id="price"
             required
           />
-        <div class="invalid-feedback">enter valid price</div>
+          <div class="invalid-feedback">Enter valid price</div>
         </div>
 
         <div class="mb-3 col-md-8">
@@ -63,12 +62,12 @@
             type="text"
             class="form-control"
             placeholder="India"
-            name="country"
+            name="listing[country]"
             id="country"
             required
           />
-           <div class="valid-feedback">Country Looks good!</div>
-        <div class="invalid-feedback">enter valid country</div>
+          <div class="valid-feedback">Country Looks good!</div>
+          <div class="invalid-feedback">Enter valid country</div>
         </div>
       </div>
 
@@ -78,12 +77,12 @@
           type="text"
           class="form-control"
           placeholder="Delhi, India"
-          name="location"
+          name="listing[location]"
           id="location"
           required
         />
-         <div class="valid-feedback">Location Looks good!</div>
-        <div class="invalid-feedback">enter valid Location</div>
+        <div class="valid-feedback">Location Looks good!</div>
+        <div class="invalid-feedback">Enter valid Location</div>
       </div>
 
       <button type="submit" class="btn btn-dark">Submit</button>
