--- a/views/Listing/list.ejs
+++ b/views/Listing/list.ejs
@@ -34,10 +34,19 @@
         <%if(currentUser){%>
             <h4>Leave a Review</h4>
             <form action="/listing/<%= listing._id %>/reviews" method="post" novalidate class="needs-validation">
-                <div class="mb-3 mt-3">
-                    <label for="rating" class="form-label">Rating</label>
-                    <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range">
-                </div>
+                <fieldset class="starability-slot">
+  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+  <label for="first-rate1" title="Terrible">1 star</label>
+  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
                 <div class="mb-3 mt-3">
                 <label for="comment">Comments</label>
                 <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"  required></textarea>
@@ -53,6 +62,7 @@
        <div class="card col-5 mb-3 ms-3 shadow p-2">
         <div class="card-body">
             <h5 class="card-title">@<%=review.author.username%></h5>
+            <p class="starability-result" data-rating="<%= review.rating%>"></p>
             <p class="card-text"><%= review.comment%></p>
             <p class="card-text"><%= review.rating%>star</p>
            <form action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=delete" method="post">
