image upload cloudinary

--- a/views/Listing/list.ejs
+++ b/views/Listing/list.ejs
@@ -7,7 +7,7 @@
 
     <!-- Listing Card -->
     <div class="card col-6 offset-3 show-card">
-        <img src="<%= listing.image %>" class="card-img-top show-img mt-4" alt="Listing image">
+        <img src="<%= listing.image.url %>" class="card-img-top show-img mt-4" alt="Listing image">
         <div class="card-body">
             <p class="card-text">
               <p> <i>Owner -  <%=listing.owner.username%></i></p>
