--- a/views/Listing/index.ejs
+++ b/views/Listing/index.ejs
@@ -4,7 +4,7 @@
      <%for(let list of listings) {%>
  <a href="/listing/<%= list._id %>">
      <div class="card">
-    <img src="<%= list.image %>" class="card-img-top " alt="listing image" style="height: 20rem;" />
+    <img src="<%= list.image.url %>" class="card-img-top " alt="listing image" style="height: 20rem;" />
     <div class="card-img-overlay"></div>
     <div class="card-body">
       <p class="card-text">
