some UI improvement

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,48 @@
-body{
-     font-family: "Plus Jakarta Sans", sans-serif !important;
-     display: flex;
-     flex-direction: column;
-     height: 100vh;
+body {
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
-.navbar{
+.navbar {
     height: 5rem;
     color: #fff;
     margin-bottom: 1rem;
 }
 
-.fa-compass{
+.fa-compass {
     color: #fe424d;
     font-size: 2rem;
 }
-.container{
+
+.container {
     flex: 1;
 }
 
-.nav-link{
+.nav-link {
     color: #222222 !important;
 }
 
- a{
+a {
     text-decoration: none !important;
     color: #222222 !important;
 }
-.f-info-links a:hover{
+
+.f-info-links a:hover {
     text-decoration: underline;
 }
-.f-info-links{
+
+.f-info-links {
     width: 100%;
 }
-.f-info-socials i{
-    margin-right:1rem ;
+
+.f-info-socials i {
+    margin-right: 1rem;
     font-size: 1.2rem;
 }
-.f-info{
+
+.f-info {
     display: flex;
     height: 8rem;
     background-color: #ebebeb;
@@ -49,52 +54,128 @@ body{
 
 
 
-.card{
+.card {
     border: none !important;
-    margin-bottom:2rem;
+    margin-bottom: 2rem;
 }
 
-.card-img-top{
+.card-img-top {
     border-radius: 1rem !important;
     width: 100%;
-    object-fit: cover;  
+    object-fit: cover;
 }
-.card-body{
+
+.card-body {
     padding: 0 !important;
 }
-.card-text p{
+
+.card-text p {
     font-weight: 400;
 }
 
 
-.card-img-overlay{
+.card-img-overlay {
     opacity: 1;
 }
-.card-img-overlay:hover{
+
+.card-img-overlay:hover {
     opacity: 0.2;
     background-color: #fff;
 }
 
 
-.btn{
-    background-color:#fe424d !important ;
+.btn2 {
+    background-color: #fe424d !important;
     border: none !important;
     margin-bottom: 2rem;
 }
 
-.show-img{
+.show-img {
     height: 30vh;
 }
 
-.btns{
+.btns {
     display: flex;
     justify-content: center;
 }
 
-.deleteBtn{
+.deleteBtn {
     background-color: red !important;
 }
-.editBtn{
+
+.editBtn {
     background-color: green !important;
     color: white !important;
+}
+
+#map {
+    width: 50vw;
+
+}
+
+.filters {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    overflow: scroll;
+    border-radius: 1rem;
+    padding: 5px 10px 0 10px;
+    position: relative;
+}
+
+.filters::-webkit-scrollbar {
+    display: none;
+}
+
+.filter {
+    text-align: center;
+    opacity: 0.7;
+}
+
+.filter:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.filter p {
+    font-size: 0.8rem;
+    width: max-content;
+}
+
+.second-nav {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+@media (max-width:600px) {
+    .second-nav{
+        flex-wrap: wrap;
+    }
+}
+
+.form-check {
+    border: 2px solid black;
+   width: fit-content;
+   padding: 5px 10px;
+    border-radius: 1rem;
+}
+
+.hidden {
+    display: none;
+}
+
+#leftArrow,
+#rightArrow {
+    padding: 7px 12px;
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    z-index: 1000;
+    border-radius: 50%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
 }
