--- a/views/Listing/index.ejs
+++ b/views/Listing/index.ejs
@@ -1,21 +1,27 @@
 <% layout("/layouts/boilerPlate")%>
-<body>
- <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-     <%for(let list of listings) {%>
- <a href="/listing/<%= list._id %>">
-     <div class="card">
-    <img src="<%= list.image.url %>" class="card-img-top " alt="listing image" style="height: 20rem;" />
-    <div class="card-img-overlay"></div>
-    <div class="card-body">
-      <p class="card-text">
-       <b> <%=list.title%></b>
-        <br />
-        <%=list.price.toLocaleString("en-IN")%>/night
-      </p>
-    </div>
-  </div>
- </a>
-  <%}%>
- </div>
+<%- include("../includes/category.ejs")%>
 
-</body>
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+  <% if(listings && listings.length > 0) { %>
+    <% for(let list of listings) { %>
+      <a href="/listing/<%= list._id %>">
+        <div class="card">
+          <img src="<%= list.image.url %>" class="card-img-top" alt="listing image" style="height: 20rem" />
+          <div class="card-img-overlay"></div>
+          <div class="card-body">
+            <p class="card-text">
+              <b><%= list.title %></b><br />
+              <%= list.price.toLocaleString("en-IN") %>/night
+              <i class="taxInfo">&nbsp; &nbsp; &nbsp; +18% GST</i>
+            </p>
+          </div>
+        </div>
+      </a>
+    <% } %>
+  <% } else { %>
+    <div class="col-12 d-flex flex-column align-items-center mt-5">
+      <h2>No listings found in this category</h2>
+      <a href="/listing" class="btn w-25 text-white btn-secondary mt-3">Show All</a>
+    </div>
+  <% } %>
+</div>
