--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,24 @@
+
+<style>
+  .btn-search{
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+  }
+  .btn-search:hover{
+    color: #fff;
+  }
+  #input{
+    border-radius: 1rem;
+  }
+</style>
 <nav
   class="navbar navbar-expand-md navbar-light bg-light border-bottom sticky-top h-auto"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/listing"
+      ><i class="fa-regular fa-compass"></i
+    ></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -13,17 +29,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="/">Home</a>
-        <a class="nav-link" href="/listing">All Listing</a>
-        <a class="nav-link" href="/listing/new">Add new Listing</a>
+        <a class="nav-link" href="/listing">Explore</a>
       </div>
-       <div class="navbar-nav ms-auto">
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search destination" id="input"/>
+        <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+      </form>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="/listing/new">Add new Listing</a>
         <%if(!currentUser){%>
-          <a class="nav-link active" href="/user/signup">SignUp</a>
-          <a class="nav-link" href="/user/login">LogIn</a>
-        <%}%>
-        <%if(currentUser){%>
-          <a class="nav-link" href="/user/logout">Logout</a>
+        <a class="nav-link active" href="/user/signup"><b>SignUp</b></a>
+        <a class="nav-link" href="/user/login"><b>LogIn</b></a>
+        <%}%> <%if(currentUser){%>
+        <a class="nav-link" href="/user/logout"><b>Logout</b></a>
         <%}%>
       </div>
     </div>
